--- a/pro_celebrity.html
+++ b/pro_celebrity.html
@@ -91,6 +91,6 @@
       <img src="Rowdy_Rathore[1].jpg"id="f">Filmed primarily in Mumbai and Hampi on a budget of ₹450 million, Rowdy Rathore was released worldwide on 1 June 2012. Its music was composed by Sajid–Wajid. It opened to extremely mixed reviews, but became one of the highest-grossing Indian films. The film was declared a blockbuster at the domestic and worldwide box office, with worldwide earnings of over ₹1.98 billion (US$28 million). Deva announced that if a sequel to the film will be made, Kumar is confirmed to reprise his role. </p>
   </ul>
   <hr>
-  <center><p id="e"> ©Copyright All rights reserved Ashish</p></center>   
+  <center><p id="e"> ©Copyright All rights reserved Ashish<br>Session-2020-21</p></center>   
 </body>
 </html>
