--- a/Computer project.html
+++ b/Computer project.html
@@ -76,7 +76,7 @@ The social institution of movie going is firmly established in our society and m
 They have provided us not only with entertainment, but also with ideas, and it would be difficult to conceive of our society without them.
 The films take as their starting point those aspects of society with which we have become familiar. They create twist plots and use other narrative devices which infuse the story with sufficient new elements to attract an audience.</p> 
 <hr>
-<center><p id="e">©Copyright All rights reserved Ashish<br>Session-2020-21</p></center>
+<center><p id="e">©Copyright All rights reserved Akash Kumar<br>Session-2020-21</p></center>
 </body>
 </html>
 
