--- a/pro_celebrity.html
+++ b/pro_celebrity.html
@@ -72,7 +72,7 @@
    <h1>FILMY</h1>       
 <table>
   <tr>
-    <td ><a href="Computer project.html"><abbr title="Home"><img src="comp,pic1.png"></abbr></a></td>
+    <td ><a href="index.html"><abbr title="Home"><img src="comp,pic1.png"></abbr></a></td>
     <td ><a href="computerpro,films.html">IFFI</a></td>
     <td ><a href="pro_celebrity.html">CELEBRITY</a></td>
     <td ><a href="procontactus.html">CONTACT US</a></td>
